src/parser/GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;


import ast.*;
import ast.type.*;
import ast.statement.*;
import ast.expression.*;
import ast.declaration.*;



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, INT_LITERAL=51, LINE_COMMENT=52, 
		MULTILINE_COMMENT=53, WHITESPACE=54, REAL_CONSTANT=55, CHAR_CONSTANT=56, 
		IDENT=57;
	public static final int
		RULE_program = 0, RULE_classDeclaration = 1, RULE_globalSection = 2, RULE_typesSection = 3, 
		RULE_varSection = 4, RULE_variableDeclaration = 5, RULE_structDeclaration = 6, 
		RULE_structField = 7, RULE_createSection = 8, RULE_featureSection = 9, 
		RULE_args = 10, RULE_arg = 11, RULE_localSection = 12, RULE_statement = 13, 
		RULE_runStatement = 14, RULE_expression = 15, RULE_expressionList = 16, 
		RULE_type = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDeclaration", "globalSection", "typesSection", "varSection", 
			"variableDeclaration", "structDeclaration", "structField", "createSection", 
			"featureSection", "args", "arg", "localSection", "statement", "runStatement", 
			"expression", "expressionList", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "';'", "'end'", "'global'", "'types'", "'vars'", "','", 
			"':'", "'deftuple'", "'as'", "'create'", "'feature'", "'('", "')'", "'is'", 
			"'do'", "'local'", "':='", "'print'", "'println'", "'read'", "'if'", 
			"'then'", "'else'", "'from'", "'until'", "'loop'", "'return'", "'run'", 
			"'['", "']'", "'.'", "'-'", "'not'", "'to'", "'<'", "'>'", "'*'", "'/'", 
			"'mod'", "'+'", "'<='", "'>='", "'='", "'<>'", "'and'", "'or'", "'INTEGER'", 
			"'DOUBLE'", "'CHARACTER'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_LITERAL", "LINE_COMMENT", "MULTILINE_COMMENT", 
			"WHITESPACE", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public ClassDeclarationContext classDeclaration;
		public RunStatementContext runStatement;
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public RunStatementContext runStatement() {
			return getRuleContext(RunStatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			((ProgramContext)_localctx).classDeclaration = classDeclaration();
			setState(37);
			((ProgramContext)_localctx).runStatement = runStatement();
			setState(38);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(((ProgramContext)_localctx).classDeclaration.ast, ((ProgramContext)_localctx).runStatement.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDeclaration ast;
		public List<FeatureSection> list = new ArrayList<FeatureSection>();
		public Token IDENT;
		public GlobalSectionContext globalSection;
		public CreateSectionContext createSection;
		public FeatureSectionContext featureSection;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public CreateSectionContext createSection() {
			return getRuleContext(CreateSectionContext.class,0);
		}
		public GlobalSectionContext globalSection() {
			return getRuleContext(GlobalSectionContext.class,0);
		}
		public List<FeatureSectionContext> featureSection() {
			return getRuleContexts(FeatureSectionContext.class);
		}
		public FeatureSectionContext featureSection(int i) {
			return getRuleContext(FeatureSectionContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__0);
			setState(42);
			((ClassDeclarationContext)_localctx).IDENT = match(IDENT);
			setState(43);
			match(T__1);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(44);
				((ClassDeclarationContext)_localctx).globalSection = globalSection();
				}
			}

			setState(47);
			((ClassDeclarationContext)_localctx).createSection = createSection();
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				((ClassDeclarationContext)_localctx).featureSection = featureSection();
				 _localctx.list.add(((ClassDeclarationContext)_localctx).featureSection.ast); 
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__11 );
			setState(55);
			match(T__2);
			((ClassDeclarationContext)_localctx).ast =  new ClassDeclaration(((ClassDeclarationContext)_localctx).IDENT,
			     ((ClassDeclarationContext)_localctx).globalSection != null ? ((ClassDeclarationContext)_localctx).globalSection.ast : null, ((ClassDeclarationContext)_localctx).createSection.ast,
			     _localctx.list
			     );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalSectionContext extends ParserRuleContext {
		public GlobalSection ast;
		public TypesSectionContext typesSection;
		public VarSectionContext varSection;
		public TypesSectionContext typesSection() {
			return getRuleContext(TypesSectionContext.class,0);
		}
		public VarSectionContext varSection() {
			return getRuleContext(VarSectionContext.class,0);
		}
		public GlobalSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalSection; }
	}

	public final GlobalSectionContext globalSection() throws RecognitionException {
		GlobalSectionContext _localctx = new GlobalSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__3);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(59);
				((GlobalSectionContext)_localctx).typesSection = typesSection();
				}
			}

			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(62);
				((GlobalSectionContext)_localctx).varSection = varSection();
				}
			}

			((GlobalSectionContext)_localctx).ast =  new GlobalSection(((GlobalSectionContext)_localctx).typesSection != null ? ((GlobalSectionContext)_localctx).typesSection.ast : null,
				((GlobalSectionContext)_localctx).varSection != null ? ((GlobalSectionContext)_localctx).varSection.ast : null
				);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypesSectionContext extends ParserRuleContext {
		public TypesSection ast;
		public List<StructDeclaration> list = new ArrayList<StructDeclaration>();
		public StructDeclarationContext structDeclaration;
		public List<StructDeclarationContext> structDeclaration() {
			return getRuleContexts(StructDeclarationContext.class);
		}
		public StructDeclarationContext structDeclaration(int i) {
			return getRuleContext(StructDeclarationContext.class,i);
		}
		public TypesSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typesSection; }
	}

	public final TypesSectionContext typesSection() throws RecognitionException {
		TypesSectionContext _localctx = new TypesSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typesSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__4);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(68);
				((TypesSectionContext)_localctx).structDeclaration = structDeclaration();
				 _localctx.list.add(((TypesSectionContext)_localctx).structDeclaration.ast); 
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((TypesSectionContext)_localctx).ast =  new TypesSection(_localctx.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarSectionContext extends ParserRuleContext {
		public VarSection ast;
		public List<VariableDeclaration> allVarDecls = new ArrayList<VariableDeclaration>();
		public VariableDeclarationContext variableDeclaration;
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public VarSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varSection; }
	}

	public final VarSectionContext varSection() throws RecognitionException {
		VarSectionContext _localctx = new VarSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__5);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(79);
				((VarSectionContext)_localctx).variableDeclaration = variableDeclaration();
				 _localctx.allVarDecls.addAll(((VarSectionContext)_localctx).variableDeclaration.ast); 
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((VarSectionContext)_localctx).ast =  new VarSection(_localctx.allVarDecls); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public List<VariableDeclaration> ast = new ArrayList<VariableDeclaration>();
		public List<Token> idTokens = new ArrayList<Token>();
		public Token IDENT;
		public TypeContext type;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((VariableDeclarationContext)_localctx).IDENT = match(IDENT);
			 _localctx.idTokens.add(((VariableDeclarationContext)_localctx).IDENT); 
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(91);
				match(T__6);
				setState(92);
				((VariableDeclarationContext)_localctx).IDENT = match(IDENT);
				 _localctx.idTokens.add(((VariableDeclarationContext)_localctx).IDENT); 
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__7);
			setState(100);
			((VariableDeclarationContext)_localctx).type = type();
			setState(101);
			match(T__1);

			        for (Token idToken : _localctx.idTokens) {
			            _localctx.ast.add(new VariableDeclaration(idToken, ((VariableDeclarationContext)_localctx).type.ast));
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDeclarationContext extends ParserRuleContext {
		public StructDeclaration ast;
		public List<StructField> list = new ArrayList<StructField>();
		public Token IDENT;
		public StructFieldContext structField;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<StructFieldContext> structField() {
			return getRuleContexts(StructFieldContext.class);
		}
		public StructFieldContext structField(int i) {
			return getRuleContext(StructFieldContext.class,i);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDeclaration; }
	}

	public final StructDeclarationContext structDeclaration() throws RecognitionException {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_structDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__8);
			setState(105);
			((StructDeclarationContext)_localctx).IDENT = match(IDENT);
			setState(106);
			match(T__9);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(107);
				((StructDeclarationContext)_localctx).structField = structField();
				_localctx.list.add(((StructDeclarationContext)_localctx).structField.ast);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(T__2);
			((StructDeclarationContext)_localctx).ast =  new StructDeclaration(((StructDeclarationContext)_localctx).IDENT,_localctx.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructFieldContext extends ParserRuleContext {
		public StructField ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StructFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structField; }
	}

	public final StructFieldContext structField() throws RecognitionException {
		StructFieldContext _localctx = new StructFieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			((StructFieldContext)_localctx).IDENT = match(IDENT);
			setState(119);
			match(T__7);
			setState(120);
			((StructFieldContext)_localctx).type = type();
			setState(121);
			match(T__1);
			((StructFieldContext)_localctx).ast =  new StructField(((StructFieldContext)_localctx).IDENT,((StructFieldContext)_localctx).type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateSectionContext extends ParserRuleContext {
		public CreateSection ast;
		public List<Token> list = new ArrayList<Token>();
		public Token IDENT;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public CreateSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createSection; }
	}

	public final CreateSectionContext createSection() throws RecognitionException {
		CreateSectionContext _localctx = new CreateSectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_createSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__10);
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				((CreateSectionContext)_localctx).IDENT = match(IDENT);
				_localctx.list.add(((CreateSectionContext)_localctx).IDENT);
				setState(127);
				match(T__1);
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENT );
			((CreateSectionContext)_localctx).ast = new CreateSection(_localctx.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureSectionContext extends ParserRuleContext {
		public FeatureSection ast;
		public List<Statement> list = new ArrayList<Statement>();
		public Token IDENT;
		public ArgsContext args;
		public TypeContext type;
		public LocalSectionContext localSection;
		public StatementContext statement;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LocalSectionContext localSection() {
			return getRuleContext(LocalSectionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FeatureSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_featureSection; }
	}

	public final FeatureSectionContext featureSection() throws RecognitionException {
		FeatureSectionContext _localctx = new FeatureSectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_featureSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__11);
			setState(135);
			((FeatureSectionContext)_localctx).IDENT = match(IDENT);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(136);
				match(T__12);
				setState(137);
				((FeatureSectionContext)_localctx).args = args();
				setState(138);
				match(T__13);
				}
			}

			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(142);
				match(T__7);
				setState(143);
				((FeatureSectionContext)_localctx).type = type();
				}
			}

			setState(146);
			match(T__14);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(147);
				((FeatureSectionContext)_localctx).localSection = localSection();
				}
			}

			setState(150);
			match(T__15);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 254453439452946432L) != 0) {
				{
				{
				setState(151);
				((FeatureSectionContext)_localctx).statement = statement();
				 _localctx.list.add(((FeatureSectionContext)_localctx).statement.ast); 
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(T__2);
			((FeatureSectionContext)_localctx).ast =  new FeatureSection(((FeatureSectionContext)_localctx).IDENT,((FeatureSectionContext)_localctx).args != null ? ((FeatureSectionContext)_localctx).args.ast : null, 
				((FeatureSectionContext)_localctx).type != null ? ((FeatureSectionContext)_localctx).type.ast : null
				,((FeatureSectionContext)_localctx).localSection != null ? ((FeatureSectionContext)_localctx).localSection.ast : null, _localctx.list
				);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgsContext extends ParserRuleContext {
		public Args ast;
		public List<Arg> lista = new ArrayList<Arg>();
		public ArgContext arg;
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			((ArgsContext)_localctx).arg = arg();
			_localctx.lista.add(((ArgsContext)_localctx).arg.ast);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(164);
				match(T__6);
				setState(165);
				((ArgsContext)_localctx).arg = arg();
				_localctx.lista.add(((ArgsContext)_localctx).arg.ast);
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((ArgsContext)_localctx).ast =  new Args(_localctx.lista);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgContext extends ParserRuleContext {
		public Arg ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
	}
